# 3D-engine

./: .gitignore  3D-Engine.sln  CMakeLists.txt
3D-Engine/: 3D-Engine.vcxproj  3D-Engine.vcxproj.filters  Resource.rc  imgui.ini
include/3D-engine/: GameObject.h  GameObjectManager.h  Mesh.h  ModelLoader.h  res_path.h
lib/assimp/: assimp-vc130-mtd.lib
src/: GameObject.cpp  GameObject.h  GameObjectManager.cpp  Mesh.cpp  ModelLoader.cpp  main.c  main.cpp  platform.hpp  platform_windows.cpp
src/engine/: Bitmap.cpp  Bitmap.h  Camera.cpp  Camera.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/imgui/: imgui_impl_glfw_gl3.cpp
